--- a/src/screens/Home/CompanyStats/CompanyStats.css
+++ b/src/screens/Home/CompanyStats/CompanyStats.css
@@ -117,7 +117,7 @@
     place-items: center;
   }
   .sms {
-    margin-top: 25vh;
+    margin-top: 0px;
   }
   .stat {
     width: 155px;
